<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@color/grey_100"
    tools:context="com.example.gukov.comedybase.AddComedyActivity">

    <EditText
        android:id="@+id/etComedy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:hint="@string/hint_comedy" />

    <EditText
        android:id="@+id/etDirector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:hint="@string/hint_director" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/hint_year" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:inputType="number"
        android:hint="@string/hint_number" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/add"
        android:theme="@style/ButtonMainStyle" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/clear"
        android:theme="@style/ButtonStyle" />

</LinearLayout>